// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`advancedChunks 1`] = `
"// entry.d.ts
import { t as shared1 } from "./shared1-chunk-DsfELruD.js";

//#region tests/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };
// shared1-chunk-DsfELruD.d.ts
//#region tests/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
export { shared1 as t };"
`;

exports[`banner 1`] = `
"// minimal.d.ts
/* My Banner */
//#region tests/fixtures/minimal.d.ts
declare function foo(): void;
//#endregion
export { foo };
/* My Footer minimal.d.ts */"
`;

exports[`basic 1`] = `
"// basic.d.ts
//#region tests/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(arg0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region tests/fixtures/basic.ts
const foo = 42;
function fn(arg0, opt) {}
let Enum = /* @__PURE__ */ function(Enum$1) {
	Enum$1[Enum$1["A"] = 0] = "A";
	Enum$1[Enum$1["B"] = 1] = "B";
	Enum$1[Enum$1["C"] = 2] = "C";
	return Enum$1;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`cjs exports 1`] = `
"// cjs-exports.js

//#region tests/fixtures/cjs-exports.ts
var cjs_exports_default = 42;

//#endregion
module.exports = cjs_exports_default;"
`;

exports[`cjs exports 2`] = `
"// cjs-exports.d.ts
//#region tests/fixtures/cjs-exports.d.ts
declare const _default: number;
export = _default;"
`;

exports[`cyclic import 1`] = `
"// a-lvZBT-VD.d.ts
//#region b.d.ts
declare class SomeClass<T$1 extends SomeInterface<number>> {
  value: T$1;
  constructor(value: T$1);
  doSomething<T$1 extends SomeInterface<number>>(value: T$1): T$1;
}
type SomeBoolean = boolean;
//#endregion
//#region a.d.ts
interface SomeInterface<T$1> {
  value: T$1;
}
type T = SomeBoolean;
//#endregion
export { SomeClass as i, T as n, SomeBoolean as r, SomeInterface as t };
// a.d.ts
import { n as T, t as SomeInterface } from "./a-lvZBT-VD.js";
export { SomeInterface, T };
// b.d.ts
import { i as SomeClass, r as SomeBoolean } from "./a-lvZBT-VD.js";
export { SomeBoolean, SomeClass };"
`;

exports[`declare module 1`] = `
"// declare-module.d.ts
//#region tests/fixtures/declare-module.d.ts
declare module "virtual" {
  const _default: string;
  export default _default;
}"
`;

exports[`dts input > custom chunk name 2`] = `
"// chunks/BCXvBysl-types.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };
// input1.d.ts
import { t as User } from "./chunks/BCXvBysl-types.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { t as User } from "./chunks/BCXvBysl-types.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`dts input > default chunk name 2`] = `
"// input1.d.mts
import { t as User } from "./types-B0jSiKC_.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.mts
import { t as User } from "./types-B0jSiKC_.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };
// types-B0jSiKC_.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };"
`;

exports[`dts input > input array 1`] = `
"// dts-input.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`dts input > input object 1`] = `
"// index.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`entryFileNames > custom chunk name 2`] = `
"// chunks/BCXvBysl-types.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };
// input1.d.ts
import { t as User } from "./chunks/BCXvBysl-types.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { t as User } from "./chunks/BCXvBysl-types.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`entryFileNames > default chunk name 2`] = `
"// input1.d.mts
import { t as Input2 } from "./input2-eCNysyew.js";

//#region tests/fixtures/alias/input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// input2-eCNysyew.d.ts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { input2 as n, Input2 as t };
// input2.d.mts
import { n as input2, t as Input2 } from "./input2-eCNysyew.js";
export { Input2, input2 };"
`;

exports[`infer false branch 1`] = `
"// index.d.ts
//#region tests/fixtures/infer-false-branch/index.d.ts
type U = string;
type Test<T> = T extends Array<infer U> ? U : U;
//#endregion
export { Test };"
`;

exports[`infer type parameter 1`] = `
"// index.d.ts
//#region tests/fixtures/infer-type-param/index.d.ts
type Mapped<T> = T extends Record<string, infer U> ? U : never;
type Fn1<U = unknown> = () => Mapped<U>;
type Fn2<V = unknown> = () => Mapped<V>;
//#endregion
export { Fn1, Fn2 };"
`;

exports[`input alias 1`] = `
"// input2-BJEZiIxE.d.ts
//#region shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { input2 as n, Input2 as t };
// input2-MGG24_1C.js
//#region shared.ts
const shared = { shared: "shared" };

//#endregion
//#region input2.ts
const input2 = {
	...shared,
	input2: "input2"
};

//#endregion
export { input2 as t };
// output1.d.ts
import { t as Input2 } from "./input2-BJEZiIxE.js";

//#region input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// output1.js
import { t as input2 } from "./input2-MGG24_1C.js";

//#region input1.ts
const input1 = {
	...input2,
	input1: "input1"
};

//#endregion
export { input1 };
// output2/index.d.ts
import { n as input2, t as Input2 } from "../input2-BJEZiIxE.js";
export { Input2, input2 };
// output2/index.js
import { t as input2 } from "../input2-MGG24_1C.js";

export { input2 };"
`;

exports[`manualChunks 1`] = `
"// entry.d.ts
import { t as shared1 } from "./shared1-chunk-DsfELruD.js";

//#region tests/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };
// shared1-chunk-DsfELruD.d.ts
//#region tests/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
export { shared1 as t };"
`;

exports[`re-export from lib > both 1`] = `
"// a.d.ts
export * from "stub-lib";

//#region rolldown:runtime

import * as import_stub_lib from "stub-lib";
//#endregion
export { import_stub_lib as t };
// b.d.ts
import { t as a_d_exports } from "./a.js";
type LibType = a_d_exports.LibType;
export { type LibType };"
`;

exports[`re-export from lib > onlyA 1`] = `
"// a.d.ts
export * from "stub-lib";"
`;

exports[`re-export from lib > onlyB 1`] = `
"// b.d.ts
import * as import_stub_lib from "stub-lib";
type LibType = import_stub_lib.LibType;
export { type LibType };"
`;

exports[`resolve dts 1`] = `
"// index.d.ts
//#region tests/fixtures/resolve-dts/mod.d.ts
type Foo = string;
//#endregion
export { Foo };
// index.js
"
`;

exports[`side effects 1`] = `
"// index.d.ts
import "./mod.js";

//#region tests/fixtures/side-effects/index.d.ts
// mod.d.ts
//#region tests/fixtures/side-effects/mod.d.ts
declare global {
  let sideEffectExecuted: boolean;
}"
`;

exports[`tree-shaking 1`] = `
"// index.d.ts
//#region tests/fixtures/tree-shaking/mod.d.ts

type A = string;
//#endregion
export { type A };
// index.js
"
`;

exports[`tsx 1`] = `
"// tsx.d.ts
import { JSX } from "solid-js";

//#region tests/fixtures/tsx.d.ts
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
//#endregion
export { createComponent };
// tsx.js
import { jsx } from "react/jsx-runtime";

//#region tests/fixtures/tsx.tsx
function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

//#endregion
export { createComponent };"
`;

exports[`type-only export 1`] = `
"// index.d.ts
//#endregion
//#region tests/fixtures/type-only-export/mod.d.ts
declare class A {}
declare class B {}
declare namespace namespace_d_exports {
  export { ns };
}
declare const ns = 42;
//#endregion
//#region tests/fixtures/type-only-export/all.d.ts
declare const all = 42;
//#endregion
export { A as RuntimeA, type A as TypeA, A as TypeC, type B as TypeB, all, type namespace_d_exports as ns };"
`;
